# ChangeLog for dev-libs/fftw
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/fftw/Attic/ChangeLog,v 1.21 2004/06/03 16:07:44 agriffis Exp $

  03 Jun 2004; Aron Griffis <agriffis@gentoo.org> fftw-3.0.1-r1.ebuild,
  fftw-3.0.1.ebuild:
  Fix use invocation

*fftw-3.0.1-r1 (19 Apr 2004)

  19 Apr 2004; Patrick Kursawe <phosphan@gentoo.org> fftw-3.0.1-r1.ebuild:
  Substituting --enable-3dnow by --enable-k7 because of bug #38076

  19 Apr 2004; Patrick Kursawe <phosphan@gentoo.org> fftw-2.1.5-r1.ebuild:
  Removing S=... with no effect

  19 Apr 2004; Patrick Kursawe <phosphan@gentoo.org> fftw-2.1.5-r1.ebuild:
  Removing S=... with no effect

  22 Mar 2004; Jason Wever <weeve@gentoo.org> fftw-3.0.1.ebuild:
  Marked stable on sparc.

  09 Mar 2004; Daniel Ahlberg <aliz@gentoo.org> fftw-2.1.5-r1.ebuild:
  Adding amd64 keyword. Closing #44068.

*fftw-2.1.5-r1 (04 Mar 2004)

  04 Mar 2004; Patrick Kursawe <phosphan@gentoo.org> fftw-2.1.5-r1.ebuild:
  Fixing info dir entries, changing keywords according to the comment (all
  arches -> stable)

  17 Feb 2004; Aron Griffis <agriffis@gentoo.org> fftw-3.0.1.ebuild:
  add ~ia64

  31 Dec 2003; George Shapovalov <george@gentoo.org> fftw-3.0.1.ebuild :
  marked stable.
  Note, stuff that needs MPI should DEPEND on 2.15 still! (but this is a task of 
  dependatnt packages)

*fftw-3.0.1 (23 Aug 2003)

  23 Aug 2003; George Shapovalov <george@gentoo.org> fftw-3.0.1.ebuild, metadata.xml :
  new version (#20048)
  thanks to Ingo Luetkebohle gentoo@blank.pages.de and  Sam Yates <sam@quux.dropbear.id.au>
  for ebuild submissions
  added metadata.xml (herd sci)

  22 Jul 2003; Daniel Ahlberg <aliz@gentoo.org> fftw-2.1.5.ebuild :
  Changed flag altering.

  07 May 2003; George Shapovalov <george@gentoo.org> fftw-2.1.5.ebuild :
  apparently fftw doesn't like -fpmath=sse on pentium-4 M based systems (#19523)